--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,7 @@
+
 <%- include('includes/head')  %>
 <%- include('includes/nav')  %>
+
 
 <div class="container">
 
@@ -10,7 +12,7 @@
       <h1 class=" text-center"> Agenda </h1>
       <p class="text-center lead"> Seus contatos estão abaixo.</p>
 
-    
+    <%- include('includes/messages') %>
 
       <div class="responsive-table">
         <table class="table">
