--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,14 +15,19 @@
     <%- include('includes/messages') %>
 
       <div class="responsive-table">
-        <table class="table">
-          <tr>
-            <td> Neto</td>
-            <td>Falcone </td>
-            <td> 83993201175 </td>
-            <td> neto@gmail.com </td>
-          </tr>
+          <table class="table">
 
+        <% contatos.forEach (contato => { %>
+          <tr>
+              <td> <%= contato.nome %> </td>
+              <td><%= contato.sobrenome %></td>
+              <td><%= contato.telefone %></td>         
+              <td><%= contato.email %> </td>
+              <td>  <a href="/contato/index/<%= contato._id %>" >Editar</a></td>
+              <td>  <a href="/contato/delete/<%= contato._id %>"  >Excluir</a></td>
+
+            </tr>
+          <%}); %>      
         
         </table>
       </div>
